--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Win32-GUI-XMLBuilder
-version:      0.21
+version:      0.3
 version_from: lib/Win32/GUI/XMLBuilder.pm
 installdirs:  site
 requires:
+    Win32::GUI:                    0
+    XML::Twig:                     0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
